# kanji_test

./: Cargo.toml
src/: define.rs  kanji.rs  kanji_info.rs  main.rs  ui.rs  ui_ending.rs  ui_game.rs  ui_gameover.rs  ui_state.rs  ui_title.rs
